// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpScreen disables SocialButtonsPane when terms were not accepted 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="social_buttons_pane"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignUpScreen renders LoginSignUpTabs SSO is disabled and has screen login 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="login_sign_up_tabs"
    />
    <div />
  </div>
</DocumentFragment>
`;

exports[`SignUpScreen renders SignUpPane when has database connection 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="sign_up_pane"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignUpScreen renders SignUpPane when has enterprise connection 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="sign_up_pane"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignUpScreen renders SingleSignOnNotice when SSO is enabled and has screen login 1`] = `
<DocumentFragment>
  <div>
    <div
      data-__type="single_sign_on_notice"
    >
      ssoEnabled
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`SignUpScreen renders SocialButtonsPane when has social connections 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        data-__type="social_buttons_pane"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignUpScreen renders empty div by default 1`] = `
<DocumentFragment>
  <div>
    <div />
  </div>
</DocumentFragment>
`;
